<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false"

    android:columnCount="4">

    <!--Person Name-->
    <TextView
        android:text="@string/add_person_form_person_name"
        android:layout_gravity="end" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/add_person_form_edit_text"
        android:ems="10"
        android:id="@+id/addPersonName"
        android:layout_row="0"
        android:layout_column="1" />

    <!--Singles-->
    <TextView
        android:text="@string/first_bill"
        android:layout_row="1"
        style="@style/AddPersonBillTextView" />

    <EditText
        style="@style/AddPersonBillEditText"
        android:id="@+id/addPersonSingles"
        android:layout_row="1" />

    <!--Fives-->
    <TextView
        android:text="@string/second_bill"
        android:layout_row="2"
        style="@style/AddPersonBillTextView" />


    <EditText
        style="@style/AddPersonBillEditText"
        android:id="@+id/addPersonFives"
        android:layout_row="2" />

    <!--Tens-->
    <TextView
        android:text="@string/third_bill"
        android:layout_row="3"
        style="@style/AddPersonBillTextView" />


    <EditText
        style="@style/AddPersonBillEditText"
        android:id="@+id/addPersonTens"
        android:layout_row="3" />

    <!--Twenties-->
    <TextView
        android:text="@string/fourth_bill"
        android:layout_row="4"
        style="@style/AddPersonBillTextView" />

    <EditText
        style="@style/AddPersonBillEditText"
        android:id="@+id/addPersonTwenties"
        android:layout_row="4" />

    <!--Fifties-->
    <TextView
        android:text="@string/fifth_bill"
        android:layout_row="5"
        style="@style/AddPersonBillTextView" />

    <EditText
        style="@style/AddPersonBillEditText"
        android:id="@+id/addPersonFifties"
        android:layout_row="5" />

    <!--Hundreds-->
    <TextView
        android:text="@string/sixth_bill"
        android:layout_row="6"
        style="@style/AddPersonBillTextView" />

    <EditText
        style="@style/AddPersonBillEditText"
        android:id="@+id/addPersonHundreds"
        android:layout_row="6" />

    <Space
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill"
        android:clickable="false" />

    <Button
        android:text="@string/finish_button"
        android:onClick="submitPerson"
        android:layout_row="8"
        android:layout_column="3" />
</GridLayout>